@@ -1,3 +1,9 @@
+2003-03-08  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* tests/pselect.c (pthread_entry1): Allow for infrequent but
+	occasional off by one error due to race condition when
+	signalling.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/fileio.cdl: Add doc link.
